# molecular-graph-descriptors

./: README.md  pyproject.toml  run_all.sh  run_single.sh
analysis/: analysis.py  analysis_geomopt.py  run_single.sh
data/water_selected_5kcalmol/: W5_geoms_5.0_KCal-2a5xta8.xyz  W6_geoms_5.0_KCal-1hgztfv.xyz
data/water_selected_5kcalmol/W5_water_prep/: W5_struc_10.xyz  W5_struc_11.xyz  W5_struc_12.xyz  W5_struc_2.xyz  W5_struc_3.xyz  W5_struc_4.xyz  W5_struc_5.xyz  W5_struc_7.xyz  W5_struc_8.xyz  W5_struc_9.xyz
data/water_selected_5kcalmol/W6_water_prep/: W6_struc_10.xyz  W6_struc_11.xyz  W6_struc_12.xyz  W6_struc_13.xyz  W6_struc_14.xyz  W6_struc_15.xyz  W6_struc_16.xyz  W6_struc_17.xyz  W6_struc_18.xyz  W6_struc_19.xyz  W6_struc_2.xyz  W6_struc_20.xyz  W6_struc_21.xyz  W6_struc_22.xyz  W6_struc_23.xyz  W6_struc_24.xyz  W6_struc_25.xyz  W6_struc_26.xyz  W6_struc_27.xyz  W6_struc_28.xyz  W6_struc_29.xyz  W6_struc_3.xyz  W6_struc_30.xyz  W6_struc_31.xyz  W6_struc_32.xyz  W6_struc_33.xyz  W6_struc_34.xyz  W6_struc_35.xyz  W6_struc_36.xyz  W6_struc_37.xyz  W6_struc_38.xyz  W6_struc_39.xyz  W6_struc_4.xyz  W6_struc_40.xyz  W6_struc_41.xyz  W6_struc_42.xyz  W6_struc_43.xyz  W6_struc_44.xyz  W6_struc_45.xyz  W6_struc_46.xyz  (+37 more)
graphdescriptors/: get_descriptors.py
graphdescriptors/analysis_scripts/: graph_loader.py
tests/: run_all.sh  run_similarity.sh  run_single.sh  verify.py
tests/reference/: W5_geoms_5.0_KCal_df.csv  W6_geoms_5.0_KCal_df.csv  W6_struc_1_W6_struc_68_df.csv  W6_struc_62_df.csv  test_W6_wdbase.csv  test_df.csv
tests/setup/: conda_env.yml
(+7 files in other folders)
